--- a/package.json
+++ b/package.json
@@ -9,11 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-dev-client": "^2.4.12",
+    "expo-file-system": "~15.4.5",
+    "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.2",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.6",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-google-maps-directions": "^2.1.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.7.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-pager-view": "6.2.0",
+    "react-native-paper": "^5.11.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
